--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,33 @@
-
+body{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 15px;
+    grid-template-rows: 300px 300px;
+    padding: 150px; 
+}
 
 div{
     display:flex;
-    flex-align: space-around;
+    
     
 }
 img{
     border-radius: 50%;
     border: solid 1px
+    height: 50px;
+    width: 50px;
 }
 
 .Daniel {
+    grid-column-start: 1;
+    grid-column-end: 3;
     color: white;
     display: flex;
     flex-direction: column;
-    flex-align: space-around;
+    align-items: space-around;
     background-color: #733FC8;
     height: 280px;
-    width: 540px;
+    /* width: 540px; */
     
     border-radius: 10px;
     padding-left: 10px;
@@ -28,10 +38,10 @@ img{
     color: white;
     display: flex;
     flex-direction: column;
-    flex-align: space-around;
+    align-items: space-around;
     background-color: #49556B;
     height: 280px;
-    width: 250px;
+    /* width: 250px; */
     
     border-radius: 10px;
     padding-left: 10px;
@@ -39,37 +49,41 @@ img{
 
   }
   .Jeanette{
+    
     display: flex;
     flex-direction: column;
     flex-align: space-around;
     background-color: #FFFFFF;
     height: 280px;
-    width: 250px;
+    /* width: 250px; */
     
     border-radius: 10px;
     padding-left: 10px;
     padding-bottom: 10px;
   }
   .Patrick{
+    grid-column-start: 2;
+    grid-column-end: 4;
     color: white;
     display: flex;
     flex-direction: column;
     flex-align: space-around;
     background-color: #18202D;
     height: 280px;
-    width: 540px;
+    /* width: 540px; */
     
     border-radius: 10px;
     padding-left: 10px;
     padding-bottom: 10px;
   }
   .Kira{
+    
     display: flex;
     flex-direction: column;
     flex-align: space-around;
     background-color: #FFFFFF;
     height: 590px;
-    width: 250px;
+    /* width: 250px; */
     
     border-radius: 10px;
     padding-left: 10px;
@@ -85,4 +99,7 @@ h2{
     }
 p{
     font-size:12px;
+}
+@media only screen and (max-width:900px){
+
 }
